@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'application'
-    //id 'org.kordamp.gradle.errorprone' version "0.47.0"
+    //id 'net.ltgt.errorprone' version '2.0.2'
 }
 
 group = 'com.l13gr03'
@@ -18,6 +18,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testImplementation 'net.jqwik:jqwik:1.5.1'
     testImplementation 'org.mockito:mockito-core:4.0.0'
+   // errorprone("com.google.errorprone:error_prone_core:2.0.2")
 }
 
 
@@ -25,6 +26,9 @@ test {
     useJUnitPlatform {
         includeEngines ('junit-jupiter', 'jqwik')
     }
+}
+tasks.withType(JavaCompile) {
+    options.forkOptions.jvmArgs += ['-Xmx512m', '-XX:MaxPermSize=256m']
 }
 
 /*
